examples/test/testpolicy13911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13911
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key47: value36
      key36: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value2
      podSelector:
        matchLabels:
          key26: value48
          key43: value33
